--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
-  "name": "grab-urls-extension",
-  "version": "1.0.0",
-  "description": "Chrome extension that grabs URLs",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Muhammad Talha",
-  "license": "ISC"
+    "name": "grab-urls-extension",
+    "version": "1.0.0",
+    "description": "Chrome extension that grabs URLs",
+    "main": "index.js",
+    "scripts": {
+        "clean": "rm -rf ./dist",
+        "build:files": "cp ./src/manifest.json ./dist/",
+        "build:html": "cp ./src/index.html ./dist/",
+        "build:css": "cp ./src/styles.css ./dist/",
+        "build:js": "cat ./src/scripts.js > ./dist/scripts.js",
+        "build": "npm run clean; mkdir dist && npm run build:files && npm run build:html && npm run build:css && npm run build:js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Muhammad Talha",
+    "license": "ISC",
+    "devDependencies": {
+        "prettier": "1.19.1"
+    }
 }
