--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
         "clean": "rm -rf ./dist",
         "build:files": "cp ./src/manifest.json ./dist/",
         "build:html": "cp ./src/index.html ./dist/",
+        "build:imgs": "cp ./src/icon*.png ./dist/",
         "build:css": "cp ./src/styles.css ./dist/",
         "build:js": "cat ./src/scripts.js > ./dist/scripts.js",
-        "build": "npm run clean; mkdir dist && npm run build:files && npm run build:html && npm run build:css && npm run build:js",
+        "build": "npm run clean; mkdir dist && npm run build:files && npm run build:imgs && npm run build:html && npm run build:css && npm run build:js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Muhammad Talha",
