adding parcel to build js

--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
         "clean": "rm -rf ./dist",
         "build:files": "cp ./src/manifest.json ./dist/",
         "build:html": "cp ./src/index.html ./dist/",
-        "build:imgs": "cp ./src/icon*.png ./dist/",
-        "build:css": "cp ./src/styles.css ./dist/",
-        "build:js": "cat ./src/scripts.js > ./dist/scripts.js",
+        "build:imgs": "cp ./src/images/icon*.png ./dist/",
+        "build:css": "cp ./src/styles/styles.css ./dist/",
+        "build:js": "parcel build src/scripts/index.js --out-dir dist --out-file scripts.js --no-source-maps",
         "build": "npm run clean; mkdir dist && npm run build:files && npm run build:imgs && npm run build:html && npm run build:css && npm run build:js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Muhammad Talha",
     "license": "ISC",
     "devDependencies": {
+        "parcel-bundler": "^1.12.4",
         "prettier": "1.19.1"
     }
 }
