adding jest for testing

--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
         "build:css": "cp ./src/styles/styles.css ./dist/",
         "build:js": "parcel build src/scripts/index.js --out-dir dist --out-file scripts.js --no-source-maps",
         "build": "npm run clean; mkdir dist && npm run build:files && npm run build:imgs && npm run build:html && npm run build:css && npm run build:js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest"
     },
     "author": "Muhammad Talha",
     "license": "ISC",
     "devDependencies": {
+        "@babel/core": "^7.8.4",
+        "@babel/preset-env": "^7.8.4",
+        "babel-jest": "^25.1.0",
+        "jest": "^25.1.0",
         "parcel-bundler": "^1.12.4",
         "prettier": "1.19.1"
     }
