--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "build:html": "cp ./src/index.html ./dist/",
         "build:imgs": "cp ./src/images/icon*.png ./dist/",
         "build:css": "cp ./src/styles/styles.css ./dist/",
-        "build:js": "parcel build src/scripts/index.js --out-dir dist --out-file scripts.js --no-source-maps",
+        "build:js": "parcel build src/scripts/index.js --out-dir dist --out-file scripts.js",
         "build": "npm run clean; mkdir dist && npm run build:files && npm run build:imgs && npm run build:html && npm run build:css && npm run build:js",
         "test": "jest"
     },
