--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "build:imgs": "cp ./src/images/icon*.png ./dist/",
         "build:jsAndCss": "parcel build src/scripts/index.js --out-dir dist --out-file bundle.js",
         "build": "npm run clean; mkdir dist && npm run build:files && npm run build:imgs && npm run build:html && npm run build:jsAndCss",
+        "watch:jsAndCss": "parcel watch src/scripts/index.js --out-dir dist --out-file bundle.js",
         "test": "jest"
     },
     "author": "Muhammad Talha",
